Fix 'No display of transactions in the tags view when tags are specified in a split'

BUG:412429
FIXED-IN:4.8.5,5.0.8

(cherry-picked from commit 1285c644bdaa79f95ef22d55c808aa877c6aa861)